# ausbills

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  bills_out.json  digicert_sha2_high_assurance_server_ca.pem  example.py  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
.github/workflows/: python-package.yml
ausbills/: .gitignore  __init__.py  act_legislative_assembly.py  act_parliament.py  act_test.py  federal_bills.py  federal_parliment.py  federal_theyvote.py  json_encoder.py  log.py  models.py  nsw_parliament.py  nt_parliament.py  qld_parliament.py  sa_parliament.py  tas_parliament.py  test.py  test_nsw.py  types.py  types_parliament.py  vic_parliament.py  wa_parliament.py  wa_parliment.py
ausbills.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ausbills/parliament/: act.py  federal.py  nsw.py  nt.py  qld.py  sa.py  tas.py  vic.py  wa.py
ausbills/util/: __init__.py  attr_dict.py  consts.py  digicert_certs.py  either.py  funcs.py
docs/: FEDERAL_NOTES.md
examples/: download_all_wa_bills.py  examples.md  scrape_wa_bill_prog.py
tests/: conftest.py  test_act.py  test_federal.py  test_generic.py  test_json_encode.py  test_nsw.py  test_nt.py  test_qld.py  test_sa.py  test_tas.py  test_vic.py  test_wa.py  test_wa_ingest.py  utils.py
tests/data/: test_read_snd_and_hansard_tr_1.txt
