[tool.poetry]
name = "ausbills"
version = "0.9.0"
description = "Get current parliament bills from Australian governments."
authors = ["OpenGov Australia <kip.crossing@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.4"
requests = "^2.25.1"
bs4 = "^0.0.1"
PyMonad = "^2.4.0"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
